--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -28,8 +28,9 @@
         <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Blog</a></li>
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Testi</a></li>
+        <li><a href="/headline"><i class="fa fa-circle-o"></i> Headline</a></li>
+        <li><a href="/gallery"><i class="fa fa-circle-o"></i> Gallery</a></li>
+        <li><a href="/testimonial"><i class="fa fa-circle-o"></i> Testi</a></li>
       </ul>
     </li>
     <li class="treeview">
