--- a/src/main/resources/templates/admin/page/testimonial.html
+++ b/src/main/resources/templates/admin/page/testimonial.html
@@ -35,7 +35,7 @@
         <tr>
           <th>No.</th>
           <th>Title</th>
-          <th>Description</th>
+          <th>Captain</th>
           <th>Date</th>
           <th>Action</th>
         </tr>
