--- a/src/main/resources/templates/admin/forms/testimonial.html
+++ b/src/main/resources/templates/admin/forms/testimonial.html
@@ -33,7 +33,21 @@
     -webkit-border-radius: 10px;
     margin-top: 50px;
 }
+.subtitle{
+  margin: 5px 0px 10px 0px;
+}
 
+.with-border-custom{
+  border-bottom: 1px solid #f4f4f4;
+  border-top: 1px solid #f4f4f4;
+}
+
+form.form-border .form-group {
+    margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #ddd;
+}
 
 </style>
 </head>
@@ -43,9 +57,10 @@
     <div class="box-header with-border">
       <h1 class="box-title">Testimonial Form</h1>
     </div>
-    <form id="headlineForm" role="form" th:action="@{'/testimonial/save'}" th:object="${response}" method="post">
+    <form role="form" th:action="@{'/testimonial/save'}" class="form-border" th:object="${response}" method="post" data-parsley-validate>
       <div class="box-body">
         <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
+
 
         <div class="form-group">
           <label for="title">Title</label>
@@ -53,24 +68,12 @@
         </div>
 
         <div class="form-group">
-          <label for="type">Cover Type is Video ?</label>
-          <input id="type" type="checkbox" name="video" th:checked="${response.object.video}" />
-        </div>
-
-        <input id="hidden_mediaUrl" type="hidden" name="coverLandscape" th:value="${response.object.coverLandscape}">
-
-        <div th:class="${response.object.video == true ? 'form-group type-true' : 'form-group type-true collapse'}">
-          <label for="videoUrl">Cover Video Url</label>
-          <input type="text" class="form-control" id="videoUrl" placeholder="Enter video url" th:value="${video}">
-        </div>
-
-        <div th:class="${response.object.video == true ? 'form-group type-false collapse' : 'form-group type-false'}">
-          <label for="cover_trip">Cover Picture</label>
+          <label for="cover_trip">Cover</label>
           <div class="wrap-file">
             <input type="file" id="cover_trip">
           </div>
-          <input type="hidden" id="hidden_cover_trip"
-                 th:value="${picture}">
+          <input type="hidden" id="hidden_cover_trip" name="coverLandscape"
+                 th:value="${response.object.coverLandscape}">
           <!-- <input type="hidden" id="hidden_upload_thumb" name="thumbnail" th:value="${response.object.thumbnail}"> -->
           <div class="wrap_cover_trip collapse">
             <div class="progress">
@@ -84,9 +87,9 @@
               <img src="" alt="">
             </div>
           </div>
-          <div th:if="${not #strings.isEmpty(picture)}"
+          <div th:if="${not #strings.isEmpty(response.object.coverLandscape)}"
                class="wrap-img-cover_trip p-top-sm">
-            <img th:src="${baseUrl + picture}"/>
+            <img th:src="${response.object.coverLandscape}"/>
           </div>
         </div>
 
@@ -151,7 +154,7 @@
 
         <div class="form-group">
           <label for="description">Description Trip</label>
-          <textarea class="form-control mce-general" name="description" id="description" placeholder="Enter description" th:text="${response.object.description}"></textarea>
+          <textarea class="form-control mce-general" name="description" id="description" placeholder="Enter description" th:text="${response.object.description}" ></textarea>
         </div>
 
         <div class="collapse">
@@ -159,10 +162,11 @@
         </div>
 
 
-        <div class="form-group article-list">
-          <div class="container-article">
+        <div class="article-list">
+          <div class="container-article form-group">
             <label for="description">Article</label>
             <div class="article-list-0">
+              <input type="text" class="form-control subtitle" id="article" placeholder="Enter Sub Title" data-parsley-required="true">
               <textarea class="form-control mce-editor ta_tmce" placeholder="Enter description" th:text="${response.object.article}"></textarea>
             </div>
             <div class="button-plus-minus" style="margin-top: 10px; padding-bottom: 10px;">
@@ -179,7 +183,7 @@
       </div>
       </div>
       <div class="box-footer">
-        <button type="button" id="submit-btn-testi" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
 
@@ -196,7 +200,7 @@
 </div>
 <th:block layout:fragment="footer-js">
   <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
-  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
+  <!--<script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>-->
   <!--<script src="https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js"></script>-->
   <script src="//tinymce.cachefly.net/4.3/tinymce.min.js"></script>
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
@@ -204,6 +208,7 @@
   <script src="../../js/si/typehead.bundle.min.js"></script>
   <script src="../../js/si/upload.js"></script>
   <script src="../../js/si/tiny_mce.js"></script>
+  <script src="../../js/si/parsley.min.js"></script>
   <script src="../../js/si/testimonial.js"></script>
   <script src="../../js/si/jquery.popupoverlay.min.js"></script>
   <script>
