--- a/src/main/resources/templates/admin/forms/testimonial.html
+++ b/src/main/resources/templates/admin/forms/testimonial.html
@@ -57,23 +57,35 @@ form.form-border .form-group {
     <div class="box-header with-border">
       <h1 class="box-title">Testimonial Form</h1>
     </div>
-    <form role="form" th:action="@{'/testimonial/save'}" class="form-border" th:object="${response}" method="post" data-parsley-validate>
+    <form role="form" id="headlineForm" th:action="@{'/testimonial/save'}" class="form-border" th:object="${response}" method="post" data-parsley-validate>
       <div class="box-body">
-        <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
+        <input id="object_id" type="hidden" name="id" th:if="${response.object.id != null && response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
 
 
         <div class="form-group">
           <label for="title">Title</label>
           <input type="text" class="form-control" name="title" id="title" placeholder="Title" th:value="${response.object.title}" required>
         </div>
-
         <div class="form-group">
-          <label for="cover_trip">Cover</label>
+          <label for="type">Cover Type is Video ?</label>
+          <input id="type" type="checkbox" name="isVideo" th:checked="${response.object.isVideo}" />
+        </div>
+
+        <input id="hidden_mediaUrl" type="hidden" name="coverLandscape" th:value="${response.object.coverLandscape}">
+
+        <div th:class="${response.object.isVideo == true ? 'form-group type-true' : 'form-group type-true collapse'}">
+          <label for="videoUrl">Cover Video Url</label>
+          <input type="text" class="form-control" id="videoUrl" placeholder="Enter video url" th:value="${video}">
+        </div>
+
+
+        <div th:class="${response.object.isVideo == true ? 'form-group type-false collapse' : 'form-group type-false'}">
+          <label for="cover_trip">Cover Picture</label>
           <div class="wrap-file">
             <input type="file" id="cover_trip">
           </div>
-          <input type="hidden" id="hidden_cover_trip" name="coverLandscape"
-                 th:value="${response.object.coverLandscape}">
+          <input type="hidden" id="hidden_cover_trip"
+                 th:value="${picture}">
           <!-- <input type="hidden" id="hidden_upload_thumb" name="thumbnail" th:value="${response.object.thumbnail}"> -->
           <div class="wrap_cover_trip collapse">
             <div class="progress">
@@ -87,12 +99,11 @@ form.form-border .form-group {
               <img src="" alt="">
             </div>
           </div>
-          <div th:if="${not #strings.isEmpty(response.object.coverLandscape)}"
+          <div th:if="${not #strings.isEmpty(picture)}"
                class="wrap-img-cover_trip p-top-sm">
-            <img th:src="${response.object.coverLandscape}"/>
+            <img th:src="${baseUrl + picture}"/>
           </div>
         </div>
-
         <div class="form-group">
           <label for="icon_cover">Icon Cover</label>
           <div class="wrap-file">
@@ -183,7 +194,7 @@ form.form-border .form-group {
       </div>
       </div>
       <div class="box-footer">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="submit-btn-testi" type="button" class="btn btn-primary">Submit</button>
       </div>
     </form>
 
