--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -42,7 +42,7 @@
       </a>
       <ul class="treeview-menu">
         <li><a href="/transaction"><i class="fa fa-circle-o"></i> Confirmation</a></li>
-        <!--<li><a href="/#"><i class="fa fa-circle-o"></i> Request Trip</a></li>-->
+        <li><a href="/request-trip"><i class="fa fa-circle-o"></i> Request Trip</a></li>
       </ul>
     </li>
   </ul>
