--- a/src/main/resources/templates/admin/forms/headline.html
+++ b/src/main/resources/templates/admin/forms/headline.html
@@ -39,20 +39,13 @@
           <input id="type" type="checkbox" name="isVideo" th:checked="${response.object.isVideo}" />
         </div>
 
-        <input id="hidden_mediaUrl" type="hidden" name="mediaUrl" th:value="${response.object.mediaUrl}">
-
-        <div th:class="${response.object.isVideo == true ? 'form-group type-true' : 'form-group type-true collapse'}">
-          <label for="videoUrl">Headline Video Url</label>
-          <input type="text" class="form-control" id="videoUrl" placeholder="Enter video url" th:value="${video}">
-        </div>
-
-        <div th:class="${response.object.isVideo == true ? 'form-group type-false collapse' : 'form-group type-false'}">
+        <div class="form-group">
             <label for="image">Headline Picture</label>
             <div class="wrap-file">
               <input type="file" id="image">
             </div>
-            <input type="hidden" id="hidden_image"
-                   th:value="${picture}">
+            <input type="hidden" id="hidden_image" name="mediaUrl"
+                   th:value="${response.object.mediaUrl}">
             <div class="wrap_image collapse">
               <div class="progress">
                 <div class="progress-bar progress-bar-info progress-bar-striped"
@@ -65,15 +58,15 @@
                 <img src="" alt="">
               </div>
             </div>
-            <div th:if="${not #strings.isEmpty(picture)}"
+            <div th:if="${not #strings.isEmpty(response.object.mediaUrl)}"
                  class="wrap-img-image p-top-sm">
-              <img th:src="${baseUrl + picture}"/>
+              <img th:src="${baseUrl + response.object.mediaUrl}"/>
             </div>
           </div>
         </div>
 
       <div class="box-footer">
-        <button id="submit-btn" type="button" class="btn btn-primary">Submit</button>
+        <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
       </div>
     </form>
   </div>
@@ -82,7 +75,7 @@
   <script src="../../js/si/jquery.html5uploader.min.js"></script>
   <script src="../../js/si/upload.js"></script>
   <script src="../../js/si/parsley.min.js"></script>
-  <script src="../../js/si/headline.js"></script>
+  <!--<script src="../../js/si/headline.js"></script>-->
   <script>
     upload_trip("/api/trip/upload_icon", "image","#image", "#hidden_image",640,640, "landscape");
   </script>
