--- a/src/main/resources/templates/admin/page/request-trip.html
+++ b/src/main/resources/templates/admin/page/request-trip.html
@@ -21,6 +21,15 @@
       margin-left: 8px;
       font-weight: 600;
     }
+
+    a{
+      color: #000 !important;
+    }
+
+    a:hover,active,visited{
+      text-decoration: none !important;
+      color: #000 !important;
+    }
   </style>
 </head>
 <body>
@@ -38,7 +47,7 @@
           <th>Start Date</th>
           <th>Max Rider</th>
           <th>Trip</th>
-          <!--<th>Action</th>-->
+          <th>Action</th>
         </tr>
         </thead>
       </table>
