--- a/src/main/resources/templates/admin/page/request-trip.html
+++ b/src/main/resources/templates/admin/page/request-trip.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html layout:decorator="admin/layout">
 <head>
-  <title>R2R-Trip Request</title>
+  <title>R2R-Trip</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.css" />
   <style>
-    span a {
+    button a {
       color: #000 !important;
     }
 
@@ -20,15 +20,6 @@
       font-size: 14px;
       margin-left: 8px;
       font-weight: 600;
-    }
-
-    a{
-      color: #000 !important;
-    }
-
-    a:hover,active,visited{
-      text-decoration: none !important;
-      color: #000 !important;
     }
   </style>
 </head>
